--- a/app/globals.css
+++ b/app/globals.css
@@ -43,3 +43,8 @@ article a {
   color: #0066cc;
   text-decoration: underline;
 }
+
+/* Hover button styles */
+.hover-button:hover {
+  background-color: #0d9488 !important;
+}
